--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,25 +13,25 @@
     <div class="wrapper">
       <div class="form-box login">
         <h2>Iniciar Sesión</h2>
-        <form action="#">
+        <form action="/auth" method="POST">
           <div class="input-box">
             <!--Hace uso del script icons-->
             <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-            <input type="email" required>
+            <input name="email" type="email" id="email" required>
             <label>Email</label>
           </div>
           <div class="input-box">
             <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-            <input type="password" required>
+            <input name="password" type="password" id="password" required>
             <label>Contraseña</label>
           </div>
           <div class="remember-forgot">
             <label><input type="checkbox">Recordar</label>
             <a href="#">¿Olvidaste tu contraseña?</a>
           </div>
-          <button type="submit" class="btn">Iniciar Sesión</button>
+          <button type="submit" class="btn" value="login">Iniciar Sesión</button>
           <div class="login-register">
-            <p>No Tienes una cuenta?<a href="#" class="register-link">Registrarse</a></p>
+            <p>No Tienes una cuenta?<a href="register" class="register-link">Registrarse</a></p>
           </div>
         </form>
       </div>
@@ -40,6 +40,23 @@
   <!--Iconos de https://ionic.io/ionicons/-->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
+  <!--Implementos Sweet Alert 2-->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+  <!--Vamos a recibir los parametros enviados desde node js-->
+
+  <% if(typeof alert != "undefined") { %>
+    <script>
+        Swal.fire({
+            title:'<%= alertTitle %>',
+            text:'<%= alertMessage %>',
+            icon:'<%= alertIcon %>',
+            showConfirmButton:'<%= showConfirmButton %>',
+            timer:'<%= timer %>'
+        }).then(()=>{
+            window.location = '/<%= ruta %>';
+        })
+    </script>
+  <% } %>
+</body>
 </html>
